# x5250

./: .gitignore  AUTHORS  ChangeLog  DESIGN  GOALS  Makefile.am  Makefile.in  NEWS  README  README.keymap  TODO  X5250  config.h.in  configure  configure.ac
attic/: Imakefile  Makefile.am  Makefile.in  README.Imakefile  config.h
bitmaps/: Makefile.am  Makefile.in  x5250icon.xbm
src/: Makefile.am  Makefile.in  alloccolors.c  debug.c  debug.h  dialog.c  dialog.h  help.c  help.h  key.c  mouse.c  resources.c  resources.h  x5250.c  x5250.h  x5250term.c  x5250term.h
